# hearth

./: .env.example  .gitignore  ADVERSARIAL_TEST_LOG.md  APPROVAL_EXECUTOR_COMPLETION.md  APPROVAL_EXECUTOR_FINAL_SUMMARY.md  APPROVAL_EXECUTOR_QUICK_REFERENCE.md  APPROVAL_EXECUTOR_QUICK_START.md  APPROVAL_EXECUTOR_SPEC.md  ARCHITECTURE.md  ARES_PHASE0_COMPLETION_SUMMARY.md  ARES_PHASE0_SPECIFICATION.md  ARES_QUICK_REFERENCE.md  ARTEMIS_BOOT_EXECUTION_GATES_COMPLETE.md  ATHENA_INTEGRATION_PLAN.md  CONTEXT_BOUNDS_REPORT.md  DOCS.md  DRY_RUN_COMPLETION.md  DRY_RUN_DELIVERY.md  DRY_RUN_QUICK_REFERENCE.md  DRY_RUN_SPEC.md  EXECUTION_OBSERVABILITY_QUICK_REFERENCE.md  EXECUTION_OBSERVABILITY_SPEC.md  EXECUTION_SPINE_REPORT.md  FAILURE_MODES.md  HARDENING_COMPLETE.md  HARDENING_SUMMARY.md  HEARTH_COMPLETE_IMPLEMENTATION.md  HESTIA_UI_LAYER_COMPLETION.md  HESTIA_UI_LAYER_INDEX.md  HESTIA_UI_LAYER_QUICK_REFERENCE.md  HESTIA_UI_LAYER_SPEC.md  LIMITATIONS.md  LIVE_MODE_GATE_QUICK_REFERENCE.md  LIVE_MODE_GATE_SPEC.md  LLM_INTEGRATION_REPORT.md  MEMORY_INTEGRATION_REPORT.md  Overview  PHASE3_DELIVERY.md  PHASE7_COMPLETION_SUMMARY.md  PHASE8_COMPLETION_SUMMARY.md  (+50 more)
ares/: __init__.py  deception.py  honeypots.py  interface.py  profiler.py  report.py  sensors.py  signals.py  state.py  timeline.py
artemis/: __init__.py  approval.py  approval_executor.py  boundary.py  dry_run.py  event_trace.py  execution_observability.py  guardian.py  guidance_mode.py  integrity.py  integrity_baseline.py  kill_switch.py  live_mode_gate.py  plan_compiler.py  security_summary.py  state.py
athena/: __init__.py  chunker.py  config.py  document_ingestor.py  embedder.py  ingestor.py  knowledge_store.py  models.py  retriever.py  service.py  utils.py
core/: bootstrap.py  config_loader.py  credentials.py  event_bus.py  invariants.py  kernel.py  safe_mode.py  (+2 more)
(+149 files in other folders)
